fixed text alignment

--- a/fashionsociety/src/components/pages/design-modeling.css
+++ b/fashionsociety/src/components/pages/design-modeling.css
@@ -50,6 +50,7 @@
     margin-left: -50px;
     display: grid;
     grid-template-columns: 230px 230px 230px;
+    justify-content: left;
   }
 
 .chairmanImage img {
@@ -60,10 +61,17 @@
     border-top-right-radius: 160px;
 }
 
+.chairmanSubtitle {
+  margin-top: 8px; 
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  gap: 30px;
+  width: 655px;
+}
+
 .subtitle {
-    width: max-content;
-    margin-top: 5px; 
-    margin-left: 70px; 
     color: #ab3430;
+    text-shadow: 0.3px 0.3px 0.6px #69211f;
     font-style: italic; 
   }
